# lsh-bitnet

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: lsh_attention_experiment.ipynb
results/: baseline_synthetic_ny_adj_50samples_20251130_174934.json  baseline_wikitext103_validation_all_all_20251130_181118.json
scripts/: bitnet_baseline_wikitext103.py  eval_synthetic_ny_adj.py
src/data_interface/: __init__.py  enwik8.py  synthetic_ny_adj.py  wikitext103.py
src/evaluation/: __init__.py  lm_metrics.py  synthetic_metrics.py
src/hash_functions/: __init__.py
src/indexing/: __init__.py
src/model_adapters/: __init__.py
